@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.advanced.wol"
        name="Advanced Wake On Lan"
-       version="1.2.0"
+       version="1.2.1"
        provider-name="mandark">
   <requires>
         <import addon="xbmc.python" version="2.0"/>
