@@ -5,10 +5,17 @@
 		<setting id="hostOrIp" type="text" label="51002" default="my-server" />
 	</category>
 	<category label="54000">
-		<setting id="autostart" type="bool" label="54001"  default="false" />
-		<setting id="updateVideoLibraryAfterWol" type="bool" label="54002" default="false" enable="eq(-1,true)" />
-		<setting id="updateMusicLibraryAfterWol" type="bool" label="54003" default="false" enable="eq(-2,true)" />
-		<setting id="wolAfterStandby" type="bool" label="54004" default="false" enable="eq(-3,true)" />
+		<setting id="separator" type="lsep" label="54010"/>
+		<setting id="autostart" type="bool" label="54011"  default="false" />
+		<setting id="wolDelayOnLaunch" type="labelenum" label="54012" values="0|5|10|15|20" default="0" visible="eq(-1,true)" />
+		<setting type="sep"/>
+		<setting id="separator" type="lsep" label="54020" visible="eq(-3,true)"/>
+		<setting id="wolAfterStandby" type="bool" label="54021" default="false" visible="eq(-4,true)" />
+		<setting id="wolDelayAfterStandby" type="labelenum" label="54022" values="0|5|10|15|20" default="0" enable="eq(-1,true)" visible="eq(-5,true)" />
+		<setting type="sep"/>
+		<setting id="separator" type="lsep" label="54030" visible="eq(-7,true)"/>
+		<setting id="updateVideoLibraryAfterWol" type="bool" label="54031" default="false" visible="eq(-8,true)" />
+		<setting id="updateMusicLibraryAfterWol" type="bool" label="54032" default="false" visible="eq(-9,true)" />
 	</category>
 	<category label="52000">
 		<setting id="enableLaunchNotifies" type="bool" label="52001" default="true" />
